# pigeon-post-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
src/pigeon_mail_bot/: app.py  main.py  settings.py
src/pigeon_mail_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pigeon_mail_bot/routers/: inbox.py
src/pigeon_mail_bot/services/: file_store.py  sheets_store.py
