[project]
name = "pigeon-mail-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.4.1",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
]

[tool.ruff]
line-length = 100

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
